examples/tests/semantic/fail/loopIndex.tig
let 
    var taylor := "Taylor" 
in 
    for index := "nope" to "nope" do (taylor := "nope")

end
